tests/e2e/yaml/endpoints-test-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ext-to-central-ports
  labels:
    app.kubernetes.io/name: stackrox
spec:
  ingress:
  - ports:
    - port: 8080
      protocol: TCP
    - port: 8081
      protocol: TCP
    - port: 8082
      protocol: TCP
    - port: 8443
      protocol: TCP
    - port: 8444
      protocol: TCP
    - port: 8445
      protocol: TCP
    - port: 8446
      protocol: TCP
    - port: 8447
      protocol: TCP
    - port: 8448
      protocol: TCP
  podSelector:
    matchLabels:
      app: central
  policyTypes:
  - Ingress
